--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ body::-webkit-scrollbar {
     #813f9b 100%
   );
   height: 400vh;
+  width: 100vw;
 }
 h1 {
   color: #fff;
